crates/clogbox-derive/src/snapshots/clogbox_derive__params__tests__derive_params_macro_nested.snap
---
source: crates/clogbox-derive/src/params.rs
expression: format_output(derive_params)
---
#[automatically_derived]
impl ::clogbox_core::param::Params for NestedEnum
where
    Self: ::clogbox_core::r#enum::Enum,
{
    fn metadata(&self) -> ::clogbox_core::param::ParamMetadata {
        match self {
            #[allow(clippy::needless_update)]
            NestedEnum::Standalone => {
                ::clogbox_core::param::ParamMetadata {
                    ..Default::default()
                }
            }
            NestedEnum::Nested(val) => val.metadata(),
        }
    }
    fn value_to_string(&self, value: ::clogbox_core::param::Normalized) -> String {
        match self {
            NestedEnum::Standalone => {
                ::clogbox_core::param::value_to_string_default(value)
            }
            NestedEnum::Nested(v) => v.value_to_string(value),
        }
    }
    fn string_to_value(
        &self,
        string: &str,
    ) -> Result<::clogbox_core::param::Normalized, String> {
        match self {
            NestedEnum::Standalone => {
                ::clogbox_core::param::string_to_value_default(string)
            }
            NestedEnum::Nested(v) => v.string_to_value(string),
        }
    }
}
