crates/clogbox-derive/src/snapshots/clogbox_derive__params__tests__derive_params_macro_with_generic.snap
---
source: crates/clogbox-derive/src/params.rs
expression: format_output(derive_params)
---
#[automatically_derived]
impl<T: ::clogbox_core::param::Params> ::clogbox_core::param::Params for GenericEnum<T>
where
    Self: ::clogbox_core::r#enum::Enum,
{
    fn metadata(&self) -> ::clogbox_core::param::ParamMetadata {
        match self {
            GenericEnum::Variant(val) => val.metadata(),
            #[allow(clippy::needless_update)]
            GenericEnum::OtherVariant => {
                ::clogbox_core::param::ParamMetadata {
                    ..Default::default()
                }
            }
        }
    }
    fn value_to_string(&self, value: ::clogbox_core::param::Normalized) -> String {
        match self {
            GenericEnum::Variant(v) => v.value_to_string(value),
            GenericEnum::OtherVariant => {
                ::clogbox_core::param::value_to_string_default(value)
            }
        }
    }
    fn string_to_value(
        &self,
        string: &str,
    ) -> Result<::clogbox_core::param::Normalized, String> {
        match self {
            GenericEnum::Variant(v) => v.string_to_value(string),
            GenericEnum::OtherVariant => {
                ::clogbox_core::param::string_to_value_default(string)
            }
        }
    }
}
