crates/clogbox-derive/src/snapshots/clogbox_derive__params__tests__derive_params_macro_with_where_clause.snap
---
source: crates/clogbox-derive/src/params.rs
expression: format_output(derive_params)
---
#[automatically_derived]
impl<T: ::clogbox_core::param::Params> ::clogbox_core::param::Params
for WhereClauseEnum<T>
where
    T: std::fmt::Debug + Default,
    Self: ::clogbox_core::r#enum::Enum,
{
    fn metadata(&self) -> ::clogbox_core::param::ParamMetadata {
        match self {
            WhereClauseEnum::Variant(val) => val.metadata(),
            #[allow(clippy::needless_update)]
            WhereClauseEnum::OtherVariant => {
                ::clogbox_core::param::ParamMetadata {
                    ..Default::default()
                }
            }
        }
    }
    fn value_to_string(&self, value: ::clogbox_core::param::Normalized) -> String {
        match self {
            WhereClauseEnum::Variant(v) => v.value_to_string(value),
            WhereClauseEnum::OtherVariant => {
                ::clogbox_core::param::value_to_string_default(value)
            }
        }
    }
    fn string_to_value(
        &self,
        string: &str,
    ) -> Result<::clogbox_core::param::Normalized, String> {
        match self {
            WhereClauseEnum::Variant(v) => v.string_to_value(string),
            WhereClauseEnum::OtherVariant => {
                ::clogbox_core::param::string_to_value_default(string)
            }
        }
    }
}
